--- a/src/main/resources/application.yaml
+++ b/src/main/resources/application.yaml
@@ -9,11 +9,12 @@ spring:
     username: root
     password: 12345
   jpa:
-    database-platform: org.hibernate.dialect.MySQLDialect
+    open-in-view: false
     defer-datasource-initialization: true
     properties:
       hibernate:
         format_sql: true
+        show_sql: true
     hibernate:
       ddl-auto: update
   sql:
