--- a/mail-sender/src/main/resources/application.yaml
+++ b/mail-sender/src/main/resources/application.yaml
@@ -1,6 +1,20 @@
 spring:
   application:
     name: email-sender
+  datasource:
+    driverClassName: com.mysql.cj.jdbc.Driver
+    url: jdbc:mysql://localhost:3306/email_history_db?allowPublicKeyRetrieval=true&useSSL=false&createDatabaseIfNotExist=true&serverTimezone=UTC
+    username: ${db_username}
+    password: ${db_password}
+  jpa:
+    open-in-view: false
+    defer-datasource-initialization: true
+    properties:
+      hibernate:
+        format_sql: true
+        show_sql: true
+    hibernate:
+      ddl-auto: update
   mail:
     host: smtp.gmail.com
     port: 587
