--- a/taskmaster/src/main/resources/application.yaml
+++ b/taskmaster/src/main/resources/application.yaml
@@ -1,13 +1,13 @@
 spring:
   thymeleaf:
-      check-template-location: true
-      cache: false
-      prefix: file:./src/main/resources/templates/
+    check-template-location: true
+    cache: false
+    prefix: file:./src/main/resources/templates/
   datasource:
     driverClassName: com.mysql.cj.jdbc.Driver
     url: jdbc:mysql://localhost:3306/planner_db?allowPublicKeyRetrieval=true&useSSL=false&createDatabaseIfNotExist=true&serverTimezone=UTC
-    username: root
-    password: 12345
+    username: ${db_username}
+    password: ${db_password}
   jpa:
     open-in-view: false
     defer-datasource-initialization: true
