Add prototype functionality to save user profile picture. Wip

--- a/taskmaster/src/main/resources/application.yaml
+++ b/taskmaster/src/main/resources/application.yaml
@@ -27,3 +27,9 @@ spring:
 mail:
   api:
     baseUrl: http://localhost:8081/api
+
+cloudinary:
+  cloud_name: ${cloudinary_cloud_name}
+  api_key: ${cloudinary_api_key}
+  api_secret: ${cloudinary_api_secret}
+
