--- a/taskmaster/build.gradle
+++ b/taskmaster/build.gradle
@@ -41,6 +41,10 @@ dependencies {
     implementation 'org.modelmapper:modelmapper:3.1.1'
 
 
+    implementation 'com.cloudinary:cloudinary-http44:1.39.0'
+//    implementation 'com.cloudinary:cloudinary-taglib:1.39.0'
+//    implementation 'io.github.cdimascio:dotenv-java:3.0.1'
+
 }
 
 tasks.named('test') {
