--- a/mail-sender/build.gradle
+++ b/mail-sender/build.gradle
@@ -29,6 +29,11 @@ dependencies {
 	testRuntimeOnly 'org.junit.platform:junit-platform-launcher'
 	compileOnly 'org.projectlombok:lombok'
 	annotationProcessor 'org.projectlombok:lombok'
+	testImplementation 'com.h2database:h2'
+//	testImplementation 'org.hsqldb:hsqldb'
+//	testImplementation 'org.testcontainers:junit-jupiter'
+//	testImplementation 'org.springframework.boot:spring-boot-testcontainers'
+//	testImplementation 'org.testcontainers:mysql'
 }
 
 tasks.named('test') {
