Add test for MailController methods - send

--- a/mail-sender/src/main/resources/application.yaml
+++ b/mail-sender/src/main/resources/application.yaml
@@ -16,6 +16,7 @@ spring:
     hibernate:
       ddl-auto: update
   mail:
+    sendEmails: true
     host: smtp.gmail.com
     port: 587
     username: ${mail}
