--- a/taskmaster/build.gradle
+++ b/taskmaster/build.gradle
@@ -39,7 +39,7 @@ dependencies {
     testImplementation 'org.springframework.security:spring-security-test'
     testRuntimeOnly 'org.junit.platform:junit-platform-launcher'
     implementation 'org.modelmapper:modelmapper:3.1.1'
-
+    testImplementation 'com.h2database:h2'
 
     implementation 'com.cloudinary:cloudinary-http44:1.39.0'
 //    implementation 'com.cloudinary:cloudinary-taglib:1.39.0'
