--- a/taskmaster/build.gradle
+++ b/taskmaster/build.gradle
@@ -40,6 +40,7 @@ dependencies {
     testRuntimeOnly 'org.junit.platform:junit-platform-launcher'
     implementation 'org.modelmapper:modelmapper:3.1.1'
     testImplementation 'com.h2database:h2'
+    implementation 'com.maciejwalkowiak.spring:wiremock-spring-boot:2.1.2'
 
     implementation 'com.cloudinary:cloudinary-http44:1.39.0'
 //    implementation 'com.cloudinary:cloudinary-taglib:1.39.0'
