Switch spring boot version, edit add-task url and fix some tests

--- a/taskmaster/src/test/resources/application.yaml
+++ b/taskmaster/src/test/resources/application.yaml
@@ -19,9 +19,13 @@ mail:
   api:
     sendEmails: false
     baseUrl: http://localhost:8081/api
-#
+
+
 cloudinary:
   cloud_name:
   api_key:
   api_secret:
-
+logging:
+  level:
+    org.hibernate.SQL: DEBUG
+    org.hibernate.orm.jdbc.bind: TRACE
