--- a/mail-sender/src/main/resources/application.yaml
+++ b/mail-sender/src/main/resources/application.yaml
@@ -18,7 +18,7 @@ spring:
     host: smtp.gmail.com
     port: 587
     username: ${mail}
-    password: ${password}
+    password: ${mail_password}
     properties:
       mail:
         smtp:
