--- a/mail-sender/src/main/resources/application.yaml
+++ b/mail-sender/src/main/resources/application.yaml
@@ -25,7 +25,11 @@ spring:
           outh: true
           starttls:
             enable: true
-
+  kafka:
+    bootstrap-servers: localhost:9092
+    producer:
+      key-serializer: org.apache.kafka.common.serialization.LongSerializer
+      value-serializer: org.springframework.kafka.support.serializer.JsonSerializer
 history:
   retention:
     period: P365D
